<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, NinePatchActivity!</string>
    <string name="app_name">Example_Ninepatch</string>
    
    <string name="long_commt">음~ 과연~ 프로그래밍을 모르는 사람은 이 "null"이란 단어를 어떻게 이해할까? 아님 아예 관심 조차없으려나&#8230;</string>
    <string name="short_commt">하하하하하하하</string>
    
    <!-- 설명 -->
    <string name="commt_01">원본에 글자넣기</string>
    <string name="commt_02">늘리기만 한 것에 글자넣기</string>
    <string name="commt_03">늘리고 길게 패딩 넣을 것에 글자넣기</string>
    <string name="commt_04">늘리고 짧게 패딩 넣은 것에 글자넣기</string>
</resources>