<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <!-- 짧은 문장을 각각의 TextView에 넣어 봄 -->
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/commt_01"
            android:layout_marginBottom="2dp"/>    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/i005_source"
            android:text="@string/short_commt" />
        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/commt_02"
            android:layout_marginBottom="2dp"/>    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/i005"
            android:text="@string/short_commt" />
        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/commt_03"
            android:layout_marginBottom="2dp"/>    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/talkbox_longpadding"
            android:text="@string/short_commt" />
        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/commt_04"
            android:layout_marginBottom="2dp"/>    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/talkbox_shortpadding"
            android:text="@string/short_commt" />
        
        <!-- 긴 문장을 각각의 TextView에 넣어 봄 -->
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/commt_01"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"/>    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/i005_source"
            android:text="@string/long_commt" />
        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/commt_02"
            android:layout_marginBottom="2dp"/>    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/i005"
            android:text="@string/long_commt" />
        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/commt_03"
            android:layout_marginBottom="2dp"/>    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/talkbox_longpadding"
            android:text="@string/long_commt" />
        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/commt_04"
            android:layout_marginBottom="2dp"/>    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/talkbox_shortpadding"
            android:text="@string/long_commt" />
        
        <!-- 긴 문장과 TextView에 maxwidth 설 각각의 TextView에 넣어 봄 -->
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/commt_01"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="2dp"/>    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:maxWidth="250dp"
            android:background="@drawable/i005_source"
            android:text="@string/long_commt" />
        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/commt_02"
            android:layout_marginBottom="2dp"/>    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:maxWidth="250dp"
            android:background="@drawable/i005"
            android:text="@string/long_commt" />
        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/commt_03"
            android:layout_marginBottom="2dp"/>    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:maxWidth="250dp"
            android:background="@drawable/talkbox_longpadding"
            android:text="@string/long_commt" />
        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/commt_04"
            android:layout_marginBottom="2dp"/>    
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:maxWidth="250dp"
            android:background="@drawable/talkbox_shortpadding"
            android:text="@string/long_commt" />
    
    </LinearLayout>
</ScrollView>